# skey

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh  key.asc
.github/workflows/: build-deb.yml
bamboo/: Cargo.toml  bamboo_ffi.h
bamboo/examples/: test_telex_w.rs
bamboo/src/: lib.rs
data/: CMakeLists.txt  fcitx5-skey-settings.desktop.in  fcitx5-skey-uinput-server@.service.in  fcitx5-skey.sh
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
pool/main/f/fcitx5-skey/: fcitx5-skey_0.1.10_amd64.deb  fcitx5-skey_0.1.11_amd64.deb  fcitx5-skey_0.1.13_amd64.deb  fcitx5-skey_0.1.14_amd64.deb  fcitx5-skey_0.1.15_amd64.deb  fcitx5-skey_0.1.16_amd64.deb  fcitx5-skey_0.1.3_amd64.deb  fcitx5-skey_0.1.4_amd64.deb  fcitx5-skey_0.1.5_amd64.deb  fcitx5-skey_0.1.6_amd64.deb  fcitx5-skey_0.1.7_amd64.deb  fcitx5-skey_0.1.8_amd64.deb  fcitx5-skey_0.1.9_amd64.deb  fcitx5-skey_0.2.10_amd64.deb  fcitx5-skey_0.2.11_amd64.deb  fcitx5-skey_0.2.12_amd64.deb  fcitx5-skey_0.2.13_amd64.deb  fcitx5-skey_0.2.14_amd64.deb  fcitx5-skey_0.2.15_amd64.deb  fcitx5-skey_0.2.16_amd64.deb  fcitx5-skey_0.2.17_amd64.deb  fcitx5-skey_0.2.18_amd64.deb  fcitx5-skey_0.2.19_amd64.deb  fcitx5-skey_0.2.1_amd64.deb  fcitx5-skey_0.2.20_amd64.deb  fcitx5-skey_0.2.21_amd64.deb  fcitx5-skey_0.2.22_amd64.deb  fcitx5-skey_0.2.2_amd64.deb  fcitx5-skey_0.2.3_amd64.deb  fcitx5-skey_0.2.6_amd64.deb  fcitx5-skey_0.2.7_amd64.deb  fcitx5-skey_0.2.8_amd64.deb  fcitx5-skey_0.2.9_amd64.deb  fcitx5-skey_0.3.1_amd64.deb  fcitx5-skey_0.3.2_amd64.deb  fcitx5-skey_0.3.3_amd64.deb
scripts/: skey-setup  test_atspi_focus.py  test_e2e.py  test_e2e.sh
scripts/apt-repo/: generate-key.sh  update-repo.sh
src/: CMakeLists.txt  a11y_monitor.cpp  a11y_monitor.h  charset.cpp  charset.h  config.h  engine.cpp  engine.h  skey-addon.conf.in  skey-im.conf.in  test_vietnamese.cpp  uinput_server.cpp  vietnamese.cpp  vietnamese.h
src/settings/: CMakeLists.txt  app_modes_tab.cpp  app_modes_tab.h  config_io.cpp  config_io.h  general_tab.cpp  general_tab.h  hotkey_edit.cpp  hotkey_edit.h  info_tab.cpp  info_tab.h  main.cpp  settings_window.cpp  settings_window.h  updater.cpp  updater.h
